[metadata]
name = pyasf
author = Gabriel Kreuzer
author_email = blanzer@tutanota.com
description = Python api for the adaptive solar facade from ETH Zurich.
version = file: pyasf/_version.txt
# url = https://github.com/blanzer/pyasf/tree/main/pyasf
keywords =
  adaptive facade
  robots
  technology
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires= 
  pyzmq>=20.0.0
  loguru>=0.5.3
  # notifiers==1.2.0
  # pytz==2020.4
  # python-dateutil==2.8.1
  # pyserial==3.5
  # numpy

# source: https://www.scivision.dev/minimal-setup-py-with-prerequisites/
